syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "DeviceGrpcService.Proto";

package device;

service Location {
  // ------------- Basic CRUD functionality ----------------------------------------------
  // Create
  rpc CreateLocation (LocationCreateRequest) returns (LocationGrpcModel);
  // Read
  rpc GetAllLocations (google.protobuf.Empty) returns (stream LocationGrpcModel);
  rpc GetLocationById (LocationByIdRequest) returns (LocationGrpcModel);
  // Update
  rpc UpdateLocationByID (LocationUpdateRequest) returns (LocationGrpcModel);
  // Delete
  rpc DeleteLocationByID (LocationByIdRequest) returns (google.protobuf.Empty);
  // -------------------------------------------------------------------------------------
}

message LocationCreateRequest {
  string Name = 1;
  oneof Cords {
    LocationCords CordsValue = 2;
  }
}

message LocationUpdateRequest {
  int32 ID = 1;
  oneof Name {
    string NameValue = 2;
  }
  oneof Cords {
    LocationCords CordsValue = 3;
    bool CordsNullified = 4;
  }
}

message LocationCords {
  double Latitude = 1;
  double Longitude = 2;
}

message LocationByIdRequest {
  int32 ID = 1;
}

message LocationGrpcModel {
  int32 ID = 1;
  string Name = 2;
  double Latitude = 3;
  double Longitude = 4;
}

